// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Connection › Router > History dispatchs succeed when 'push' (history length increases) 1`] = `
Object {
  "hash": "",
  "pathname": "/the-beauties-of-gullfoss/",
  "search": "",
  "state": Object {
    "context": Object {
      "columns": Array [
        Array [
          Object {
            "id": 60,
            "type": "post",
          },
        ],
      ],
    },
    "event": null,
    "method": "push",
    "selectedItem": Object {
      "id": 60,
      "page": undefined,
      "type": "post",
    },
    "type": "connection/ROUTE_CHANGE_REQUESTED",
  },
}
`;

exports[`Connection › Router > History dispatchs succeed when 'push' (history length increases) 2`] = `
Array [
  Object {
    "context": Object {
      "columns": Array [
        Array [
          Object {
            "id": 60,
            "type": "post",
          },
        ],
      ],
    },
    "method": "push",
    "selectedItem": Object {
      "id": 60,
      "page": undefined,
      "type": "post",
    },
    "type": "connection/ROUTE_CHANGE_SUCCEED",
  },
]
`;

exports[`Connection › Router > History dispatchs succeed when 'replace' (same history length) 1`] = `
Object {
  "hash": "",
  "pathname": "/the-beauties-of-gullfoss/",
  "search": "",
  "state": Object {
    "context": Object {
      "columns": Array [
        Array [
          Object {
            "id": 60,
            "type": "post",
          },
        ],
      ],
    },
    "event": null,
    "method": "replace",
    "selectedItem": Object {
      "id": 60,
      "page": undefined,
      "type": "post",
    },
    "type": "connection/ROUTE_CHANGE_REQUESTED",
  },
}
`;

exports[`Connection › Router > History dispatchs succeed when 'replace' (same history length) 2`] = `
Array [
  Object {
    "context": Object {
      "columns": Array [
        Array [
          Object {
            "id": 60,
            "type": "post",
          },
        ],
      ],
    },
    "method": "replace",
    "selectedItem": Object {
      "id": 60,
      "page": undefined,
      "type": "post",
    },
    "type": "connection/ROUTE_CHANGE_SUCCEED",
  },
]
`;

exports[`Connection › Router > History does not dispatch a succeed when just updating the url 1`] = `
Object {
  "hash": "",
  "pathname": "/",
  "search": "?p=60",
  "state": Object {
    "context": Object {
      "columns": Array [
        Array [
          Object {
            "id": 60,
            "type": "post",
          },
        ],
      ],
    },
    "event": null,
    "method": "push",
    "selectedItem": Object {
      "id": 60,
      "page": undefined,
      "type": "post",
    },
    "type": "connection/ROUTE_CHANGE_REQUESTED",
  },
}
`;

exports[`Connection › Router > History does not dispatch a succeed when just updating the url 2`] = `
Object {
  "hash": "",
  "pathname": "/the-beauties-of-gullfoss/",
  "search": "",
  "state": Object {
    "context": Object {
      "columns": Array [
        Array [
          Object {
            "id": 60,
            "type": "post",
          },
        ],
      ],
    },
    "event": null,
    "method": "push",
    "selectedItem": Object {
      "id": 60,
      "page": undefined,
      "type": "post",
    },
    "type": "connection/ROUTE_CHANGE_REQUESTED",
  },
}
`;

exports[`Connection › Router > History initializes blank if not populated 1`] = `
Object {
  "hash": "",
  "pathname": "/",
  "search": "",
  "state": undefined,
}
`;

exports[`Connection › Router > History initializes the url if populated 1`] = `
Object {
  "hash": "",
  "pathname": "/the-beauties-of-gullfoss/",
  "search": "",
  "state": Object {
    "context": Object {
      "columns": Array [
        Array [
          Object {
            "id": 60,
            "type": "post",
          },
        ],
      ],
    },
    "method": "push",
    "selectedItem": Object {
      "fromList": Object {
        "id": "post",
        "page": 1,
        "type": "latest",
      },
      "id": 60,
      "mstId": "0_post_60",
      "type": "post",
      "visited": true,
    },
  },
}
`;
